# Tree

./: .env.example  .gitignore  .md  API_ROUTES.md  CLAUDE.md  EXTENSIONS.md  KERNEL.md  LICENSE  LICENSING.md  OS.md  PROTOCOL.md  README.md  SCHEMA_FLATTEN_WIP.md  begin.js  blog-extension-architecture.md  docker-compose.yml  genesis.js  package-lock.json  package.json  plant.js  readme2.md  selfHosting.md
rust/: Cargo.toml  build-node.sh  dd.md
rust/store/: README.md  build.rs
rust/store/book/: genesis-home.word  genesis-spaces.word  genesis.word  index.word
rust/store/src/: lib.rs
rust/store/tests/: resolvers.rs  store_api.rs
rust/store/words/: able.word  be.word  chain.word  fold.word  for.word  if.word  in.word  recall.word  verbs.word
rust/store/words/able-manager/: delete-able.word  set-able.word
rust/treebook/: Cargo.toml
rust/treebook/examples/: genesis_probe.rs  survey_genesis.rs
rust/treebook/src/: lib.rs
rust/treebook/tests/: full_genesis.rs  genesis.fingerprint.json  genesis_conformance.rs  read_word_word.rs
rust/treecas/: Cargo.toml  NOTES.md
rust/treecas/src/: anchor.rs  durable.rs  sweep.rs
rust/treecognition/: Cargo.toml
rust/treecognition/src/: assemble.rs  call.rs  cognize.rs  federation.rs  lib.rs  llm.rs  scripted.rs  ssrf.rs
rust/treefold/: Cargo.toml
rust/treefold/src/: fold.rs  lib.rs  reducers.rs
rust/treefold/tests/: fold.vectors.json  fold_vectors.rs  gen-fold-vectors.mjs  stamp_then_fold.rs
rust/treegenesis/: Cargo.toml  NOTES.md
rust/treegenesis/src/: lib.rs
rust/treegenesis/tests/: genesis.rs
rust/treehash-node/: Cargo.toml
rust/treehash-node/src/: lib.rs
rust/treehash/src/: canon.rs  hash.rs  lib.rs  sha256.rs
rust/treehost/: Cargo.toml  NOTES.md
rust/treehost/src/: able_manager.rs  birth.rs  cherub.rs  config.rs  credential.rs  flow.rs  inheritation.rs  key.rs  lib.rs  llm.rs  matter.rs  owner.rs  purge.rs  relocate.rs  render.rs  toolkit.rs
rust/treehost/tests/: resolvers.rs
rust/treeibp/: Cargo.toml
rust/treeibp/src/: lib.rs
rust/treeibp/tests/: do_makes_do.rs  drift_baseline.json  ibp_host_seam.rs  ibp_pipe.rs  move_being.rs
rust/treematter/src/: lib.rs
rust/treeos/: Cargo.toml
rust/treeos/src/: act.rs  cognize.rs  config.rs  federation.rs  ibp.rs  lib.rs  live.rs  llm_http.rs  main.rs  mdns.rs  moment.rs  resolve.rs  seeops.rs  server.rs  wire.rs
rust/treeos/tests/: act_pipe.rs  being_ownership.rs  first_being_birth.rs  ibp_http_bridge.rs  llm_outbound.rs  present_loop_phase1.rs  present_loop_phase2.rs  word_pipe.rs
rust/treeportal/: Cargo.toml  OLD-PORTAL-LOGIC-AUDIT.md  run.sh  treeportal.desktop
rust/treeportal/examples/: smoke.rs
rust/treeportal/src/: main.rs  state.rs
rust/treeproj/src/: index.rs  lib.rs  snapshot.rs
rust/treeproj/tests/: index_layer.rs  lineage_queries.rs  projection_cache.rs
rust/treeprotocol/: Cargo.toml
rust/treeprotocol/src/: redact.rs
rust/treesecondary/src/: inbox.rs  lib.rs  position.rs
rust/treesecondary/tests/: secondary_folds.rs
rust/treesign/: Cargo.toml
rust/treesign/src/: keyfile.rs  lib.rs  name_facet.rs  nameid.rs  password_lock.rs  payload.rs  sign.rs
rust/treesign/tests/: conformance.rs
rust/treestore/: Cargo.toml  NOTES.md
rust/treestore/src/: act_log.rs  commit.rs  history.rs  lib.rs  moment.rs  ord.rs  recover.rs  stamp.rs  store.rs
rust/treestore/tests/: act.vectors.json  act_vectors.rs  branching.rs  commit_moment.rs  signed_commit.rs  stamp_vectors.rs  store_roundtrip.rs
rust/treesymbol/: Cargo.toml
rust/treesymbol/src/: lib.rs
rust/treeval/: Cargo.toml
rust/treeval/src/: able.rs  auth.rs  lib.rs
rust/treeval/tests/: auth_vectors.rs  rasterize_vectors.rs
rust/treeverify/src/: lib.rs
rust/treeverify/tests/: chain.vectors.json
rust/treeword/: Cargo.toml  WORD-DRIVEN-PARSER.md
rust/treeword/examples/: parse.rs
rust/treeword/src/: lib.rs  reader.rs  render.rs
rust/treeword/tests/: corpus.vectors.json  corpus_conformance.rs  drift_baseline.json  gen_corpus_vectors.mjs  guard.vectors.json  parse.vectors.json  parse_vectors.rs  render_roundtrip.rs
rust/treewordfold/: Cargo.toml
rust/treewordfold/src/: lib.rs
rust/treewordfold/tests/: word_fold_conformance.rs
seed/store/: ABLES-UNIFICATION.md  Cargo.toml  EXTRACTION-PLAN.md  NOTES.md  README.md  STAYS-PLAN.md  WORDS.md  build.rs  genesisHost.js
seed/store/book/: book.js  bundle.js  capture.js  genesis-delegates.word  genesis-spaces.word  genesisBook.js  graft.js  index.word  ops.js  receive.js  seedPlant.js  share-book.word  share-ops.js
seed/store/src/: lib.rs  toolkit.rs
seed/store/tests/: resolvers.rs  store_api.rs
seed/store/words/: GENESIS.md  being.word  call.word  can.word  do.word  flow.word  history.word  iam.word  name.word  out.word  story.word  verbs.word  weave.word  while.word
seed/treeaddress/: Cargo.toml
seed/treeaddress/src/: history.rs  lib.rs
seed/treefold/: Cargo.toml
seed/treefold/src/: fold.rs  lib.rs  reducers.rs  value.rs
seed/treefold/tests/: fold.vectors.json  stamp_then_fold.rs
seed/treehash-node/: Cargo.toml
seed/treeibp/: Cargo.toml
seed/treeibp/src/: lib.rs
seed/treeibp/tests/: do_makes_do.rs  drift_baseline.json  drift_gate.rs  ibp_host_seam.rs  ibp_pipe.rs  lineage_vocabulary.rs  move_being.rs
seed/treematter/: Cargo.toml
seed/treeportal/: Cargo.toml  build.rs  launch.sh
seed/treeportal/examples/: auth.rs
seed/treeportal/src/: main.rs  state.rs
seed/treeproj/: Cargo.toml  NOTES.md
seed/treeproj/src/: lineage.rs  snapshot.rs
seed/treeproj/tests/: index_layer.rs
seed/treesecondary/: Cargo.toml  NOTES.md
seed/treesecondary/src/: lib.rs  threads.rs  value.rs
seed/treesign/: Cargo.toml  NOTES.md
seed/treesign/src/: credential.rs  jwt.rs  mnemonic.rs  payload.rs
seed/treesign/tests/: conformance.rs
seed/treestore/: Cargo.toml  NOTES.md
seed/treestore/src/: reel.rs  util.rs
seed/treestore/tests/: act_cas.rs  ord.rs  store.vectors.json  torn_write.rs
seed/treeverify/: Cargo.toml
seed/treeverify/tests/: chain_vectors.rs
story/rust/treehash/: Cargo.toml
(+5576 files in other folders)
