# TreeOS Rust port workspace. Bottom-up along the determinism spine:
#   treehash   — Tier 1: content-addressed identity (canonical JSON + SHA-256)
#   treefold   — Tier 2: the fold engine (per-kind reducers + the pure fold loop)
#   treeverify — Tier 3: chain verification (re-hash each fact/act, walk the p-links)
#   treestore  — Tier 4: the append-only store + the stamp (act -> fact), real std::fs reels
#   treecas    — the CAS content-byte store: matter's content bytes addressed by SHA-256, the sharded
#                cas/<hash[0..2]>/<hash> layout + .meta.json sidecar, atomic tmp+rename+fsync, hash-
#                validated reads, the retention sweep (reference set is an INPUT), disk-file anchor.
#                Ports contentStore.js + casSweep.js + anchor.js; byte-compatible so JS + Rust share one CAS.
#   treeproj   — Tier 5: the projection cache (.proj snapshots — fold a reel, cache the folded state)
#   treesecondary — the SECONDARY cross-cutting projections' PURE FOLD: inbox (summon -> row, answer ->
#                evict), threads (rootCorrelation -> lastAct bump), position-coord (do:set-being coord ->
#                (beingId,spaceId) coord row). fact -> row state, byte-compatible with the JS projStore
#                rows; the I/O wiring (when they fire, the cross-fact guards) stays in JS for now.
#   treeos     — the standalone boot: read+fold+verify the on-disk chain, no Node (the OS entry seed)
#   treeword   — the Word engine port (the parser first): Word text -> IR, vector-proven vs parser.js
#   treeval    — the Word evaluator's rasterize: act IR + ctx -> the fact spec, vector-proven vs evaluator.js
#   treeibp    — the IBP layer: the two primitives, moment (perceive) + act (speak one word), over the spine
#   treegenesis— the genesis planter (headless): plant a fresh Story's signed clock-free root birth (the
#                lone 2-fact/2-reel fusion: name:declare + be:birth), over treestore + treesign. STANDALONE,
#                not wired into treeos (see treegenesis/NOTES.md for the genesis-subcommand handoff).
#   treehost   — the HOST SEE-OP BRIDGE: the *Host.js resolver bodies (setBeingHost / setSpaceHost /
#                spaceHost / endSpaceHost / setMatterHost / matterHost) as native Rust. The materials
#                act-handlers are WORD-SOLE; their substrate reads bottom out in `see resolve-X(args) as
#                bind` host see-ops that treeibp::run_body does not evaluate yet. This crate ports the
#                resolvers' READ + VALIDATION behind an injectable dispatch SEAM (the HostResolver trait),
#                composing the past-engine crates. AUTHORITY (the able-walk / owner) is the CALLER's input
#                (an AuthCtx), so treehost does NOT dep treeibp/treeval. See treehost/NOTES.md for the
#                run_body wiring handoff (mirror able_spec_of: an additive `see` arm, not a rewrite).
[workspace]
resolver = "2"
members = ["treehash", "treefold", "treeverify", "treestore", "treecas", "treeproj", "treesecondary", "treeos", "treeword", "treeval", "treeibp", "treesign", "treegenesis", "treehost", "treecognition", "treewordfold", "treebook", "treeaddress", "treeprotocol", "treematter", "treeportal", "treesymbol"]
# treehash-node (the napi FFI wrapper) is EXCLUDED: it pulls napi from crates.io and builds a cdylib,
# so it stays out of the zero-dependency determinism-spine workspace. Build it on its own.
exclude = ["treehash-node"]
