[package]
name = "treegenesis"
version = "0.1.0"
edition = "2021"
description = "TreeOS genesis planter (Rust), headless. Plants a fresh Story's self-grounding parentless root birth as TWO separate one-word moments (name:declare \"I\" on the library reel, then be:birth \"am\" on the being reel), each a signed clock-free moment via the general commit_moment_signed, with NO Node. NO fusion: the Spacebar Law (one word = one fact = one moment) holds at genesis. Mirrors seed/sprout.js ensureIAm + seed/storyIdentity.js first-boot key mint, over the determinism spine (treestore + treesign). STANDALONE: not wired into treeos; see NOTES.md for the genesis-subcommand handoff."
license = "AGPL-3.0"

# treegenesis plants genesis as TWO ordinary one-word moments via the GENERAL
# seal (commit_moment_signed), called twice: name:declare "I" then be:birth "am".
# Each is one act -> one fact -> one reel, so there is NO fusion and NO genesis
# exemption - the Spacebar Law (one word = one fact = one moment) holds at genesis.
# An earlier version hand-wrote 2 facts under 1 act (bypassing the seal's fanout
# refusal); that was a DRIFT and has been removed.
[dependencies]
treehash = { path = "../treehash" }
treestore = { path = "../treestore" }
treesign = { path = "../treesign" }
# base64 for writing the minted story key as the Node-compatible PKCS8/SPKI PEMs
# (the inverse of treesign::seed_from_pkcs8_pem) on first boot. Same crate +
# version treesign pins, so the lock graph is unchanged.
base64 = "0.22.1"

[dev-dependencies]
# The test FOLDS the planted genesis (library + being projections materialize)
# and VERIFIES the chains. treefold/treeverify reach the test via treestore's
# re-exports, but the fold entry points (fold) live in treefold directly.
treefold = { path = "../treefold" }

[lib]
name = "treegenesis"
path = "src/lib.rs"
