[package]
name = "treehost"
version = "0.1.0"
edition = "2021"
description = "TreeOS host SEE-OP BRIDGE: the *Host.js resolver bodies as native Rust. The materials act-handlers are WORD-SOLE (.word files) whose substrate reads bottom out in `see resolve-X(args) as bind` host see-ops (setBeingHost.js / setSpaceHost.js / spaceHost.js / endSpaceHost.js / setMatterHost.js / matterHost.js). treeibp::run_body does not evaluate those `see` nodes yet, so the .word files cannot execute end-to-end. This crate ports the resolver bodies' substrate-READ + VALIDATION (load-row, name-uniqueness, coord-bounds, CAS-existence, the DELETED-sentinel, the type-registry gate, the content-addressed id mint) behind an injectable dispatch SEAM (the HostResolver trait), composing the past-engine crates (treeproj find/refold, treefold fold, treecas existence, treestore reels, treehash hash). AUTHORITY (the able-walk / owner) is the CALLER's input (an AuthCtx parameter), so this crate does NOT depend on treeibp/treeval."
license = "AGPL-3.0"

[dependencies]
treehash = { path = "../treehash" }
treefold = { path = "../treefold" }
treeproj = { path = "../treeproj" }
treestore = { path = "../treestore" }
treecas = { path = "../treecas" }
# treesign carries ALL crypto (ed25519 / BIP39 / PKCS8): the key-export see-op (paper-form) COMPOSES
# it for the DETERMINISTIC mnemonic derivation, reimplementing no crypto. The non-reproducible mints
# (the fresh keypair + AES encrypt) still DEFER to the seal — the credential/key sees stay inert.
treesign = { path = "../treesign" }
# treecognition carries the LLM CONNECTION resolver bodies (connect.rs: resolve_connection /
# resolve_connection_update / resolve_connection_removal / resolve_slot_assignment / resolve_llm_config)
# and the SSRF gate (ssrf::validate_base_url). treehost COMPOSES them behind the same HostResolver seam
# the wave-1/2 substrate resolvers use — it reimplements none of the validation/normalization. The
# dependency is one-way (treecognition is pure: treehash/treeword/treeval/treeaddress only; it does NOT
# depend on treehost), so no cycle.
treecognition = { path = "../treecognition" }
# AES-256-CBC for the LLM api-key encryptor INJECTED into resolve_connection / resolve_connection_update.
# The JS floor (connect.js) encrypts the key as `ivHex:ciphertextHex` (aes-256-cbc, 16-byte random IV)
# under CUSTOM_LLM_API_SECRET_KEY so the stored ciphertext stays decryptable by the JS reality. treesign
# only carries AES-GCM (a different cipher), so the CBC primitive lives here, scoped to the LLM seam.
cbc = "0.4"
aes = "0.8"
hex = "0.4"
getrandom = "0.2"

# The resolver tests plant rows the SAME way treeproj/treefold's write-half tests do: stamp a reel
# (treestore seal_moment + write_fact_doc) then refold it into a .proj snapshot (treeproj), so the
# toolkit's find/fold/cas reads see the real on-disk store. No mocks.
[dev-dependencies]
treestore = { path = "../treestore" }
treecas = { path = "../treecas" }

[lib]
name = "treehost"
path = "src/lib.rs"

# treehost does NOT depend on treeibp or treeval: the AUTHORITY result (has_authority_over / owner)
# is an INPUT (AuthCtx), mirroring the existing able_spec_of / host: &dyn Fn injection seams. It
# composes ONLY the past-engine crates (find/fold/cas/reels/hash); it reimplements none of them.
