[package]
name = "treeos"
version = "0.1.0"
edition = "2021"
description = "Standalone Rust boot of the TreeOS chain: read (treestore) + fold (treefold) + verify (treeverify) the on-disk reels, with NO Node, NO napi, NO FFI. The determinism spine as one bootable program — the 'anyone can boot' entry point seed. http/ws + the Word runtime are the remaining layers."
license = "AGPL-3.0"

[lib]
name = "treeos_lib"
path = "src/lib.rs"

[[bin]]
name = "treeos"
path = "src/main.rs"

[dependencies]
treehash = { path = "../treehash" }
treefold = { path = "../treefold" }
treeverify = { path = "../treeverify" }
treestore = { path = "../treestore" }
treeword = { path = "../treeword" }
treeval = { path = "../treeval" }
treeibp = { path = "../treeibp" }
treesecondary = { path = "../treesecondary" }
treecognition = { path = "../treecognition" }
treematter = { path = "../treematter" }
treeaddress = { path = "../treeaddress" }
treesymbol = { path = "../treesymbol" }
treeprotocol = { path = "../treeprotocol" }
# the binary is the EDGE that holds the story key: it loads .story/story.key and signs the story's (I)
# own acts. Crypto lives here + in treesign, never in the spine/treeibp lib (which takes the closure).
treesign = { path = "../treesign" }
# treebook reads the genesis BOOK (the I coins the vocabulary + speaks the world into being). The SERVING
# runtime never plants — but the explicit `treeos genesis` recovery subcommand does (guarded: it refuses
# if the store already exists, so it only ever plants a FRESH world, never overwrites a live one).
treebook = { path = "../treebook" }
# OUTBOUND HTTPS at the edge: ureq (blocking, rustls — no OpenSSL, tiny surface) lets cognize POST a
# chat-completion to an OpenAI-compatible cloud provider over TLS. This is the OUTBOUND edge ONLY (a
# being's LLM able reaching its connected provider); the INBOUND wire stays plain WS (IBP). The local
# http:// path (ollama on the LAN) keeps the zero-dep TcpStream client; https:// routes through ureq.
ureq = { version = "3", default-features = false, features = ["rustls"] }

[dev-dependencies]
treecognition = { path = "../treecognition" }
# the present-loop SEAL proof births a real genesis world (vocabulary coined so an op-word deed
# resolves) before summoning a being whose flow deed stamps. Test-only — the runtime never plants.
treebook = { path = "../treebook" }
