[package]
name = "treewordfold"
version = "0.1.0"
edition = "2021"
description = "The WORD-FOLD: the live word-set is the FOLD of the declare-word (do:coin / do:retire) facts on the Named being I's reel, NOT a hardcoded code table. Reads facts through the existing fold/projection path (treestore), folds them to a word-set (name -> descriptor {kind, body pointer, see-op, noun, idFrom}). The store-side language layer that replaces treeibp's hardcoded fold_op_word match. Generic over WHATEVER declare-word facts I has read in (no fixed genesis set)."
license = "AGPL-3.0"

[dependencies]
# READ the facts off the reel via the kernel store (compose, never reimplement). treehash for Json.
treehash = { path = "../treehash" }
treestore = { path = "../treestore" }
# treefold — used ONLY to read a being's `parentBeingId` off its folded STATE (the mother-lineage walk).
# The STATE reducer (reduce_being) is the parent-pointer source ONLY; the vocabulary itself NEVER folds
# through it — vocabulary ACCUMULATES (union), state RESOLVES (latest-wins). See fold_lineage_word_set.
treefold = { path = "../treefold" }

# The fold-from-chain contract (a fresh "I" world genesised through the stamper, its vocabulary folded)
# is proven end-to-end by treebook's full_genesis test — words laid the only legitimate way, through I
# + the stamper — so this crate needs no test-only store fixtures of its own.
