[package]
name = "treeseed"
version = "0.1.0"
edition = "2021"
description = "THE STORE — every word of the story with its floor Rust BESIDE it (words/<bundle>/<word>.word + <floor>.rs), the genesis book (book/), and the resolver seam (AuthCtx/HostResolver/Resolvers). One place: to see what a word MEANS open its .word; to see its floor open the .rs next to it. The engine (treeos) boots from THIS store — the JS seed/ tree is a dead reference corpus. Formerly the treehost crate; the resolvers now live inside their word bundles."
license = "AGPL-3.0"

[dependencies]
treehash = { path = "../treehash" }
treefold = { path = "../treefold" }
treeproj = { path = "../treeproj" }
treestore = { path = "../treestore" }
treecas = { path = "../treecas" }
# treesign carries ALL crypto (ed25519 / BIP39 / PKCS8): the key-export see-op (paper-form) COMPOSES
# it for the DETERMINISTIC mnemonic derivation, reimplementing no crypto. The non-reproducible mints
# (the fresh keypair + AES encrypt) still DEFER to the seal — the credential/key sees stay inert.
treesign = { path = "../treesign" }
# treecognition carries the LLM CONNECTION resolver bodies (connect.rs: resolve_connection /
# resolve_connection_update / resolve_connection_removal / resolve_slot_assignment / resolve_llm_config)
# and the SSRF gate (ssrf::validate_base_url). treehost COMPOSES them behind the same HostResolver seam
# the wave-1/2 substrate resolvers use — it reimplements none of the validation/normalization. The
# dependency is one-way (treecognition is pure: treehash/treeword/treeval/treeaddress only; it does NOT
# depend on treehost), so no cycle.
treecognition = { path = "../treecognition" }
# The LLM api-key encryptor INJECTED into resolve_connection / resolve_connection_update is the FRESH
# treesign at-rest seal (AES-256-GCM under credential_key(JWT_SECRET) — treesign::encrypt_credential), the
# same envelope every other at-rest secret uses; the outbound edge unseals with treesign::decrypt_credential.
# The legacy AES-256-CBC `ivHex:ciphertextHex` shim (cbc/aes/hex deps) is GONE — one crypto, one reality.
# getrandom stays for the connection-id mint (a fresh positional uuid keying the connections Map).
getrandom = "0.2"

# The resolver tests plant rows the SAME way treeproj/treefold's write-half tests do: stamp a reel
# (treestore seal_moment + write_fact_doc) then refold it into a .proj snapshot (treeproj), so the
# toolkit's find/fold/cas reads see the real on-disk store. No mocks.
[dev-dependencies]
treestore = { path = "../treestore" }
treecas = { path = "../treecas" }

[lib]
name = "treeseed"
path = "src/lib.rs"

# treehost does NOT depend on treeibp or treeval: the AUTHORITY result (has_authority_over / owner)
# is an INPUT (AuthCtx), mirroring the existing able_spec_of / host: &dyn Fn injection seams. It
# composes ONLY the past-engine crates (find/fold/cas/reels/hash); it reimplements none of them.
