[package]
name = "treefold"
version = "0.1.0"
edition = "2021"
description = "TreeOS fold engine (Tier 2): per-kind reducers (being/space/matter/name/library) + the pure fold loop, ported from seed/materials/*/reducer.js + reducerHelpers.js. Proven byte-identical to the JS via canonicalized folded state."
license = "AGPL-3.0"

[dependencies]
treehash = { path = "../treehash" }

# Dev-only: the write-half proof (tests/stamp_then_fold.rs) stamps a real reel through the store, then
# folds it — closing the read+write+verify+fold loop in pure Rust. treestore is a sibling crate; the
# fold lib itself stays zero-dep beyond treehash (the determinism spine is unchanged).
[dev-dependencies]
treestore = { path = "../treestore" }

[lib]
name = "treefold"
path = "src/lib.rs"
